--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <header>Minha Lista de Tarefas</header>
+  <p id="funcionamento">Clique duas vezes em um item para marcá-lo como completo</p>
 </body>
 <script src="script.js"></script>
 </html>
