--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <header>Minha Lista de Tarefas</header>
   <p id="funcionamento">Clique duas vezes em um item para marcá-lo como completo</p>
+  <input type="text" id="texto-tarefa">
 </body>
 <script src="script.js"></script>
 </html>
