--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
   <header>Minha Lista de Tarefas</header>
   <p id="funcionamento">Clique duas vezes em um item para marcá-lo como completo</p>
   <input type="text" id="texto-tarefa">
-  <ol id="lista-tarefas"></ol>
+  <button id="criar-tarefa">Criar tarefa</button>
+  <ol id="lista-tarefas">
+
+  </ol>
 </body>
 <script src="script.js"></script>
 </html>
