--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <p id="funcionamento">Clique duas vezes em um item para marcá-lo como completo</p>
   <input type="text" id="texto-tarefa">
   <button id="criar-tarefa">Criar tarefa</button>
+  <button id="apaga-tudo">Apagar lista</button>
   <ol id="lista-tarefas">
   </ol>
 </body>
