--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <input type="text" id="texto-tarefa">
   <button id="criar-tarefa">Criar tarefa</button>
   <button id="apaga-tudo">Apagar lista</button>
+  <button id="remover-finalizados">Remover finalizados</button>
   <ol id="lista-tarefas">
   </ol>
 </body>
