--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <button id="criar-tarefa">Criar tarefa</button>
   <button id="apaga-tudo">Apagar lista</button>
   <button id="remover-finalizados">Remover finalizados</button>
+  <button id="salvar-tarefas">Salvar tarefas</button>
   <ol id="lista-tarefas">
   </ol>
 </body>
