--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <button id="apaga-tudo">Apagar lista</button>
   <button id="remover-finalizados">Remover finalizados</button>
   <button id="salvar-tarefas">Salvar tarefas</button>
+  <button id="mover-cima">Mover para cima</button>
+  <button id="mover-baixo">Mover para baixo</button>
   <ol id="lista-tarefas">
   </ol>
 </body>
