--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <button id="salvar-tarefas">Salvar tarefas</button>
   <button id="mover-cima">Mover para cima</button>
   <button id="mover-baixo">Mover para baixo</button>
+  <button id="remover-selecionado">Remover selecionado</button>
   <ol id="lista-tarefas">
   </ol>
 </body>
